--- a/life-xp/src/index.css
+++ b/life-xp/src/index.css
@@ -1,4 +1,5 @@
 body {
+  background-color: #282c34;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
@@ -12,13 +13,57 @@ code {
     monospace;
 }
 
+.App-header {
+  padding: 40px 0px 0px 0px;
+  background-color: #1a1d22;
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+  align-items: center;
+  justify-content: center;
+  border-radius: 8px;
+}
+
 .countdown {
+  width: 50%;
   font-family: "Anonymous Pro", monospace;
   /* font-family: 'Dosis', sans-serif;
 font-family: 'Kanit', sans-serif; */
-  font-weight: 400;
+  font-weight: 800;
+  font-size: 25px;
+  text-align: center;
+  color: rgb(255, 15, 15);
 }
 
-.App-header {
-  padding: 40px;
+.Expbar {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+}
+.expbar-in {
+  float: right;
+}
+
+.expbar-description {
+  color: #a6d0dd;
+  font-family: "Anonymous Pro", monospace;
+  font-weight: 600;
+}
+
+.expbar-in {
+  width: 100%;
+  max-width: 100vw;
+  /* border: 1px solid #ffffff00; */
+  height: 2px;
+  /* transform: scale(-1, 1); */
+  /* border-radius: 16px; */
+  background-color: #a6d0dd21;
+}
+
+.expbar-in .expbar-val {
+  height: 100%;
+  /* width: 10%; */
+  /* border-radius: 16px 0px 0px 16px; */
+  box-shadow: 0px 0px 15px #a6d0dd;
+  background-color: #a6d0dd;
 }
