--- a/life-xp/src/index.css
+++ b/life-xp/src/index.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #282c34;
+  background-color: #dddddd;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
@@ -14,27 +14,55 @@ code {
 }
 
 .App-header {
-  padding: 40px 0px 0px 0px;
-  background-color: #1a1d22;
+  padding: 20px 0px 0px 0px;
+  background-color: #000000;
   display: flex;
   flex-direction: column;
-  gap: 40px;
+  gap: 20px;
   align-items: center;
   justify-content: center;
-  border-radius: 8px;
+  position: fixed;
+  width: 100%;
+  z-index: 1000;
+}
+.digits {
+  width: 90%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
+.logo {
+  color: white;
+  font-weight: 900;
+  font-size: 15px;
+  font-family: "Anonymous Pro", monospace;
+  letter-spacing: 2px;
+}
 .countdown {
-  width: 50%;
   font-family: "Anonymous Pro", monospace;
   /* font-family: 'Dosis', sans-serif;
 font-family: 'Kanit', sans-serif; */
-  font-weight: 800;
-  font-size: 25px;
-  text-align: center;
+  font-weight: 100;
+  font-size: 18px;
+  /* justify-content: right; */
+  text-align: right;
   color: rgb(255, 15, 15);
+  margin: 0px;
 }
 
+.exp-points {
+  font-family: "Anonymous Pro", monospace;
+  /* font-family: 'Dosis', sans-serif;
+font-family: 'Kanit', sans-serif; */
+  font-weight: 100;
+  font-size: 18px;
+  /* justify-content: right; */
+  text-align: right;
+  color: #a6d0dd;
+  margin: 0px;
+  text-align: left;
+}
 .Expbar {
   display: flex;
   flex-direction: row;
@@ -57,13 +85,114 @@ font-family: 'Kanit', sans-serif; */
   height: 2px;
   /* transform: scale(-1, 1); */
   /* border-radius: 16px; */
-  background-color: #a6d0dd21;
+  /* background-color: #a6d0dd21; */
 }
 
 .expbar-in .expbar-val {
   height: 100%;
+  position: relative;
+  z-index: 2;
   /* width: 10%; */
   /* border-radius: 16px 0px 0px 16px; */
-  box-shadow: 0px 0px 15px #a6d0dd;
   background-color: #a6d0dd;
+  box-shadow: 0px 0px 8px #a6d0dd;
+}
+
+.expbar-val-time {
+  z-index: 0;
+  height: 100%;
+  background-color: rgb(255, 15, 15);
+  box-shadow: 0px 0px 8px rgb(255, 0, 0);
+  float: right;
+  margin-top: -2px;
+}
+
+.cup-platform {
+  width: 5000px;
+  padding: 200px;
+  padding-top: 50vh;
+  gap: 100px;
+  display: flex;
+  flex-direction: row;
+  overflow-x: auto;
+}
+
+.cup {
+  margin-top: 40px;
+  height: 510px;
+  width: 220px;
+  border: 5px solid #03030344;
+  border-top: 0px;
+  transform: translate(-50%, -50%);
+  position: relative;
+  border-radius: 0px 0px 60px 60px;
+  background: linear-gradient(
+    to bottom,
+    #ffffff00,
+    #ffffff00 50%,
+    blue 50%,
+    rgb(0, 0, 0)
+  );
+  /* background: url("coffee-img-1.svg"), url("coffee-img-2.svg"); */
+  /* background-position: 0 0, 0 0;
+  background-repeat: repeat-x;
+  animation: coffee 4s infinite linear; */
+}
+/* @keyframes coffee {
+  100% {
+    background-position: -100% 0, -100% 0;
+  }
+} */
+/* .cup:before {
+  content: "";
+  position: absolute;
+  height: 80px;
+  width: 60px;
+  border: 10px solid #030303;
+  border-left: none;
+  right: -75px;
+  top: 30px;
+  border-radius: 0 30px 80px 0;
+} */
+.cup:after {
+  position: absolute;
+  content: "";
+  height: 10px;
+  width: 300px;
+  background-color: #030303;
+  left: -45px;
+  bottom: -10px;
+  border-radius: 10px;
+}
+.bubble {
+  height: 15px;
+  width: 15px;
+  background-color: rgb(196, 196, 196);
+  border-radius: 50%;
+  position: absolute;
+  animation: bubbles forwards infinite;
+  opacity: 0.6;
+}
+@keyframes bubbles {
+  100% {
+    transform: translateY(-150px);
+    opacity: 0;
+  }
+}
+.bubble-1 {
+  left: 30px;
+  bottom: 10px;
+  animation-delay: 0.5s;
+  animation-duration: 3s;
+}
+.bubble-2 {
+  left: 80px;
+  bottom: 35px;
+  animation-delay: 1.2s;
+  animation-duration: 4s;
+}
+.bubble-3 {
+  left: 140px;
+  bottom: 30px;
+  animation-duration: 4s;
 }
