--- a/life-xp/src/index.css
+++ b/life-xp/src/index.css
@@ -1,6 +1,7 @@
 body {
-  background-color: #dddddd;
+  /* background-image: linear-gradient(45deg, blue, black); */
   margin: 0;
+  /* height: 1000px; */
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
@@ -14,11 +15,11 @@ code {
 }
 
 .App-header {
-  padding: 20px 0px 0px 0px;
+  padding: 30px 0px 0px 0px;
   background-color: #000000;
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: 30px;
   align-items: center;
   justify-content: center;
   position: fixed;
@@ -38,13 +39,15 @@ code {
   font-size: 15px;
   font-family: "Anonymous Pro", monospace;
   letter-spacing: 2px;
+  margin: auto;
 }
 .countdown {
-  font-family: "Anonymous Pro", monospace;
+  /* font-family: "Anonymous Pro", monospace; */
+  font-family: "Karla", sans-serif;
   /* font-family: 'Dosis', sans-serif;
 font-family: 'Kanit', sans-serif; */
-  font-weight: 100;
-  font-size: 18px;
+  font-weight: 600;
+  font-size: 25px;
   /* justify-content: right; */
   text-align: right;
   color: rgb(255, 15, 15);
@@ -52,11 +55,12 @@ font-family: 'Kanit', sans-serif; */
 }
 
 .exp-points {
-  font-family: "Anonymous Pro", monospace;
+  /* font-family: "Anonymous Pro", monospace; */
+  font-family: "Karla", sans-serif;
   /* font-family: 'Dosis', sans-serif;
 font-family: 'Kanit', sans-serif; */
-  font-weight: 100;
-  font-size: 18px;
+  font-weight: 600;
+  font-size: 25px;
   /* justify-content: right; */
   text-align: right;
   color: #a6d0dd;
@@ -74,7 +78,8 @@ font-family: 'Kanit', sans-serif; */
 
 .expbar-description {
   color: #a6d0dd;
-  font-family: "Anonymous Pro", monospace;
+  /* font-family: "Anonymous Pro", monospace; */
+  font-family: "Karla", sans-serif;
   font-weight: 600;
 }
 
@@ -82,7 +87,7 @@ font-family: 'Kanit', sans-serif; */
   width: 100%;
   max-width: 100vw;
   /* border: 1px solid #ffffff00; */
-  height: 2px;
+  height: 1px;
   /* transform: scale(-1, 1); */
   /* border-radius: 16px; */
   /* background-color: #a6d0dd21; */
@@ -96,32 +101,38 @@ font-family: 'Kanit', sans-serif; */
   /* border-radius: 16px 0px 0px 16px; */
   background-color: #a6d0dd;
   box-shadow: 0px 0px 8px #a6d0dd;
+  border-radius: 16px;
 }
 
 .expbar-val-time {
   z-index: 0;
   height: 100%;
-  background-color: rgb(255, 15, 15);
-  box-shadow: 0px 0px 8px rgb(255, 0, 0);
+  background-color: rgb(255, 25, 25);
+  box-shadow: 0px 0px 4px rgb(255, 0, 0);
   float: right;
-  margin-top: -2px;
+  margin-top: -1px;
+  border-radius: 16px;
 }
 
 .cup-platform {
-  width: 5000px;
-  padding: 200px;
-  padding-top: 50vh;
-  gap: 100px;
+  background-image: linear-gradient(45deg, #77b9af, #509c91);
+  width: 8000px;
+  padding: 50px;
+  padding-top: 42vh;
+  gap: 50px;
   display: flex;
   flex-direction: row;
   overflow-x: auto;
+  min-height: 50vh;
 }
 
 .cup {
+  z-index: 3;
   margin-top: 40px;
-  height: 510px;
+  margin-left: 155px;
+  height: 350px;
   width: 220px;
-  border: 5px solid #03030344;
+  border: 7px solid #000000;
   border-top: 0px;
   transform: translate(-50%, -50%);
   position: relative;
@@ -131,7 +142,7 @@ font-family: 'Kanit', sans-serif; */
     #ffffff00,
     #ffffff00 50%,
     blue 50%,
-    rgb(0, 0, 0)
+    #d3d3d3
   );
   /* background: url("coffee-img-1.svg"), url("coffee-img-2.svg"); */
   /* background-position: 0 0, 0 0;
@@ -159,15 +170,31 @@ font-family: 'Kanit', sans-serif; */
   content: "";
   height: 10px;
   width: 300px;
-  background-color: #030303;
+  background-color: #000000;
   left: -45px;
   bottom: -10px;
   border-radius: 10px;
+  z-index: 0;
 }
+
+.cup-and-name {
+  width: 300px;
+}
+
+.cup-name {
+  text-align: center;
+  padding-left: 20px;
+  margin-top: -150px;
+  font-family: "Karla", sans-serif;
+  font-size: 22px;
+  font-weight: 900px;
+  letter-spacing: -0.5px;
+}
+
 .bubble {
   height: 15px;
   width: 15px;
-  background-color: rgb(196, 196, 196);
+  background-color: #ffffff;
   border-radius: 50%;
   position: absolute;
   animation: bubbles forwards infinite;
@@ -195,4 +222,14 @@ font-family: 'Kanit', sans-serif; */
   left: 140px;
   bottom: 30px;
   animation-duration: 4s;
+}
+
+.add-button {
+  text-align: center;
+}
+
+.plus-img {
+  padding: 20px;
+  height: 50px;
+  width: 50px;
 }
