--- a/life-xp/src/index.css
+++ b/life-xp/src/index.css
@@ -15,19 +15,21 @@ code {
 }
 
 .App-header {
-  padding: 30px 0px 0px 0px;
-  background-color: #000000;
+  padding: 20px 0px 0px 0px;
+  background-color: #101010;
   display: flex;
   flex-direction: column;
-  gap: 30px;
+  gap: 20px;
   align-items: center;
   justify-content: center;
   position: fixed;
-  width: 100%;
+  width: 98.7%;
   z-index: 1000;
+  border-radius: 8px;
+  margin: 8px;
 }
 .digits {
-  width: 90%;
+  width: 95%;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -46,11 +48,11 @@ code {
   font-family: "Karla", sans-serif;
   /* font-family: 'Dosis', sans-serif;
 font-family: 'Kanit', sans-serif; */
-  font-weight: 600;
-  font-size: 25px;
+  font-weight: 100;
+  font-size: 18px;
   /* justify-content: right; */
   text-align: right;
-  color: rgb(255, 15, 15);
+  color: rgb(253, 76, 76);
   margin: 0px;
 }
 
@@ -59,8 +61,8 @@ font-family: 'Kanit', sans-serif; */
   font-family: "Karla", sans-serif;
   /* font-family: 'Dosis', sans-serif;
 font-family: 'Kanit', sans-serif; */
-  font-weight: 600;
-  font-size: 25px;
+  font-weight: 100;
+  font-size: 18px;
   /* justify-content: right; */
   text-align: right;
   color: #a6d0dd;
@@ -87,7 +89,7 @@ font-family: 'Kanit', sans-serif; */
   width: 100%;
   max-width: 100vw;
   /* border: 1px solid #ffffff00; */
-  height: 1px;
+  height: 2px;
   /* transform: scale(-1, 1); */
   /* border-radius: 16px; */
   /* background-color: #a6d0dd21; */
@@ -102,37 +104,54 @@ font-family: 'Kanit', sans-serif; */
   background-color: #a6d0dd;
   box-shadow: 0px 0px 8px #a6d0dd;
   border-radius: 16px;
+  margin-left: 5px;
 }
 
 .expbar-val-time {
   z-index: 0;
   height: 100%;
-  background-color: rgb(255, 25, 25);
-  box-shadow: 0px 0px 4px rgb(255, 0, 0);
+  background-color: rgb(204, 9, 9);
+  /* box-shadow: 0px 0px 4px rgb(255, 0, 0); */
   float: right;
-  margin-top: -1px;
+  margin-top: -2px;
   border-radius: 16px;
+  /* border: solid 1px black; */
+  margin-right: 5px;
 }
 
 .cup-platform {
-  background-image: linear-gradient(45deg, #77b9af, #509c91);
-  width: 8000px;
+  /* background-image: linear-gradient(45deg, #77b9af, #509c91); */
+  background-color: #000000;
+  width: 11100px;
   padding: 50px;
-  padding-top: 42vh;
-  gap: 50px;
+  padding-bottom: 0px;
+  padding-left: 100px;
+  padding-top: 265px;
+  gap: 0px;
   display: flex;
   flex-direction: row;
   overflow-x: auto;
-  min-height: 50vh;
+  /* min-height: 50vh; */
 }
 
+.side-bar {
+  border-radius: 8px;
+  position: fixed;
+  background-color: #101010;
+  color: white;
+  height: 84vh;
+  margin-top: -185px;
+  margin-left: -92px;
+  z-index: 11;
+  width: 65px;
+}
 .cup {
   z-index: 3;
-  margin-top: 40px;
-  margin-left: 155px;
+  margin-top: 18px;
+  margin-left: 100px;
   height: 350px;
-  width: 220px;
-  border: 7px solid #000000;
+  width: 160px;
+  border: 2px solid #929292;
   border-top: 0px;
   transform: translate(-50%, -50%);
   position: relative;
@@ -165,30 +184,34 @@ font-family: 'Kanit', sans-serif; */
   top: 30px;
   border-radius: 0 30px 80px 0;
 } */
-.cup:after {
+/* .cup:after {
   position: absolute;
   content: "";
   height: 10px;
   width: 300px;
-  background-color: #000000;
+  background-color: #6b6b6b;
   left: -45px;
   bottom: -10px;
   border-radius: 10px;
   z-index: 0;
-}
+} */
 
 .cup-and-name {
-  width: 300px;
+  width: 200px;
 }
 
 .cup-name {
   text-align: center;
-  padding-left: 20px;
+  padding: 0px 20px;
   margin-top: -150px;
   font-family: "Karla", sans-serif;
   font-size: 22px;
-  font-weight: 900px;
+  font-weight: 400;
+  text-transform: uppercase;
   letter-spacing: -0.5px;
+  color: white;
+  /* margin-left: 100px; */
+  min-height: 52px;
 }
 
 .bubble {
@@ -230,6 +253,9 @@ font-family: 'Kanit', sans-serif; */
 
 .plus-img {
   padding: 20px;
+  margin-left: 10px;
   height: 50px;
   width: 50px;
+  filter: invert(100);
+  /* margin-left: 100px; */
 }
