--- a/life-xp/src/index.css
+++ b/life-xp/src/index.css
@@ -7,6 +7,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: black;
 }
 
 code {
@@ -15,18 +16,18 @@ code {
 }
 
 .App-header {
-  padding: 20px 0px 0px 0px;
+  padding: 3vh 0px 0px 0px;
   background-color: #101010;
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: 3vh;
   align-items: center;
   justify-content: center;
   position: fixed;
   width: 98.7%;
   z-index: 1000;
   border-radius: 8px;
-  margin: 8px;
+  margin: 1vh;
 }
 .digits {
   width: 95%;
@@ -38,18 +39,23 @@ code {
 .logo {
   color: white;
   font-weight: 900;
-  font-size: 15px;
+  font-size: 2vmin;
   font-family: "Anonymous Pro", monospace;
   letter-spacing: 2px;
   margin: auto;
 }
-.countdown {
-  /* font-family: "Anonymous Pro", monospace; */
+
+.font-big {
   font-family: "Karla", sans-serif;
   /* font-family: 'Dosis', sans-serif;
 font-family: 'Kanit', sans-serif; */
   font-weight: 100;
-  font-size: 18px;
+  font-size: 3vmin;
+}
+
+.countdown {
+  /* font-family: "Anonymous Pro", monospace; */
+
   /* justify-content: right; */
   text-align: right;
   color: rgb(253, 76, 76);
@@ -57,12 +63,6 @@ font-family: 'Kanit', sans-serif; */
 }
 
 .exp-points {
-  /* font-family: "Anonymous Pro", monospace; */
-  font-family: "Karla", sans-serif;
-  /* font-family: 'Dosis', sans-serif;
-font-family: 'Kanit', sans-serif; */
-  font-weight: 100;
-  font-size: 18px;
   /* justify-content: right; */
   text-align: right;
   color: #a6d0dd;
@@ -89,7 +89,7 @@ font-family: 'Kanit', sans-serif; */
   width: 100%;
   max-width: 100vw;
   /* border: 1px solid #ffffff00; */
-  height: 2px;
+  height: 0.3vh;
   /* transform: scale(-1, 1); */
   /* border-radius: 16px; */
   /* background-color: #a6d0dd21; */
@@ -104,7 +104,7 @@ font-family: 'Kanit', sans-serif; */
   background-color: #a6d0dd;
   box-shadow: 0px 0px 8px #a6d0dd;
   border-radius: 16px;
-  margin-left: 5px;
+  margin-left: 1vh;
 }
 
 .expbar-val-time {
@@ -113,7 +113,7 @@ font-family: 'Kanit', sans-serif; */
   background-color: rgb(204, 9, 9);
   /* box-shadow: 0px 0px 4px rgb(255, 0, 0); */
   float: right;
-  margin-top: -2px;
+  margin-top: -0.3vh;
   border-radius: 16px;
   /* border: solid 1px black; */
   margin-right: 5px;
@@ -122,12 +122,11 @@ font-family: 'Kanit', sans-serif; */
 .cup-platform {
   /* background-image: linear-gradient(45deg, #77b9af, #509c91); */
   background-color: #000000;
-  width: 11100px;
-  padding: 50px;
-  padding-bottom: 0px;
-  padding-left: 100px;
-  padding-top: 265px;
-  gap: 0px;
+  width: 2000vh;
+  padding: 5vh;
+  padding-left: 15vh;
+  padding-top: 42vh;
+  gap: 0vh;
   display: flex;
   flex-direction: row;
   overflow-x: auto;
@@ -140,22 +139,51 @@ font-family: 'Kanit', sans-serif; */
   background-color: #101010;
   color: white;
   height: 84vh;
-  margin-top: -185px;
-  margin-left: -92px;
+  top: 12vh;
+  left: 1vh;
   z-index: 11;
-  width: 65px;
+  width: 10vh;
 }
+
+.add-exp {
+  width: 30vh;
+  transform: rotate(270deg);
+  position: fixed;
+  bottom: 15vh;
+  margin-left: -10vh;
+  background: none;
+  border: none;
+  padding: 0px;
+  color: rgb(187, 187, 187);
+  cursor: pointer;
+}
+
+.side-form-out {
+  color: white;
+  background-color: #101010;
+  border-radius: 8px;
+  height: 78vh;
+  position: relative;
+  margin-top: -30vh;
+  margin-left: -3vh;
+  width: 50vh;
+  padding: 3vh 4vh;
+  /* top: 12vh;
+  width: 40vh;
+  left: 12vh; */
+}
+
 .cup {
   z-index: 3;
-  margin-top: 18px;
-  margin-left: 100px;
-  height: 350px;
-  width: 160px;
-  border: 2px solid #929292;
+  margin-top: 2vh;
+  margin-left: 12.5vh;
+  height: 50vh;
+  width: 20vh;
+  border: 0.3vh solid #929292;
   border-top: 0px;
   transform: translate(-50%, -50%);
   position: relative;
-  border-radius: 0px 0px 60px 60px;
+  border-radius: 0px 0px 8vh 8vh;
   background: linear-gradient(
     to bottom,
     #ffffff00,
@@ -197,26 +225,26 @@ font-family: 'Kanit', sans-serif; */
 } */
 
 .cup-and-name {
-  width: 200px;
+  width: 25vh;
 }
 
 .cup-name {
   text-align: center;
-  padding: 0px 20px;
-  margin-top: -150px;
+  padding: 0px 3vh;
+  margin-top: -21vh;
   font-family: "Karla", sans-serif;
-  font-size: 22px;
-  font-weight: 400;
+  font-size: 3vmin;
+  font-weight: 100;
   text-transform: uppercase;
-  letter-spacing: -0.5px;
-  color: white;
+  /* letter-spacing: -0.5px; */
+  color: rgb(199, 199, 199);
   /* margin-left: 100px; */
-  min-height: 52px;
+  min-height: 7vh;
 }
 
 .bubble {
-  height: 15px;
-  width: 15px;
+  height: 2vh;
+  width: 2vh;
   background-color: #ffffff;
   border-radius: 50%;
   position: absolute;
@@ -230,21 +258,21 @@ font-family: 'Kanit', sans-serif; */
   }
 }
 .bubble-1 {
-  left: 30px;
-  bottom: 10px;
+  left: 3vh;
+  bottom: 1vh;
   animation-delay: 0.5s;
   animation-duration: 3s;
 }
 .bubble-2 {
-  left: 80px;
-  bottom: 35px;
+  left: 8vh;
+  bottom: 4vh;
   animation-delay: 1.2s;
   animation-duration: 4s;
 }
 .bubble-3 {
-  left: 140px;
-  bottom: 30px;
-  animation-duration: 4s;
+  left: 16vh;
+  bottom: 3vh;
+  animation-duration: 2s;
 }
 
 .add-button {
@@ -252,10 +280,10 @@ font-family: 'Kanit', sans-serif; */
 }
 
 .plus-img {
-  padding: 20px;
-  margin-left: 10px;
-  height: 50px;
-  width: 50px;
+  padding: 2vh;
+  margin-left: 1vh;
+  height: 5vh;
+  width: 5vh;
   filter: invert(100);
   /* margin-left: 100px; */
 }
